<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mapas">

    <fragment
        android:id="@+id/nav_mapas"
        android:name="com.leotoloza.exploradordelugaresturisticos.ui.Mapa.MapsFragment"
        android:label="@string/Mapa_interactivo"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_lugares"
        android:name="com.leotoloza.exploradordelugaresturisticos.ui.Lugares_Turisticos.LugaresFragment"
        android:label="@string/lugares_cercanos"
        tools:layout="@layout/fragment_lugar" >
        <action
            android:id="@+id/action_nav_lugares_to_nav_detalle"
            app:destination="@id/nav_detalle" />
    </fragment>

    <fragment
        android:id="@+id/nav_config"
        android:name="com.leotoloza.exploradordelugaresturisticos.ui.Configuracion.ConfigFragment"
        android:label="@string/configuracion"
        tools:layout="@layout/fragment_config" />
    <fragment
        android:id="@+id/nav_salir"
        android:name="com.leotoloza.exploradordelugaresturisticos.ui.Salir.SalirFragment"
        android:label="@string/salir"
        tools:layout="@layout/fragment_config" />
    <fragment
        android:id="@+id/nav_detalle"
        android:name="com.leotoloza.exploradordelugaresturisticos.ui.Lugares_Turisticos.DetalleFragment"
        android:label="@string/Detalle"
        tools:layout="@layout/fragment_detalle" >
        <action
            android:id="@+id/action_nav_detalle_to_nav_lugares"
            app:destination="@id/nav_lugares" />
    </fragment>
</navigation>